# DebordoLambda

./: Cargo.toml  register_command.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
src/: config.rs  main.rs  simulation.rs  worker.rs
src/discord/: api.rs  mod.rs  signature.rs  types.rs
