[package]
name = "DebordoLambda"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
rand = "0.8"
rand_mt = "4.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# AWS Lambda
lambda_runtime = "1.1.1"
aws_lambda_events = "1.1.1"
tokio = { version = "1", features = ["full"] }

# AWS SDK
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1"

# HTTP client pour Discord webhooks
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Discord signature verification
ed25519-dalek = { version = "2.1", features = ["std"] }
hex = "0.4"

# Tracing pour les logs Lambda
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

